--- a/contacto.html
+++ b/contacto.html
@@ -63,7 +63,7 @@
         <h3>También puedes contactarnos en:</h3>
         <ul>
             <li><strong>Teléfono:</strong> +34 900 123 456</li>
-            <li><strong>Correo:</strong> info@feriadeviajes2025.com</li>
+            <li><strong>Correo:</strong> diturralde@birt.eus</li>
             <li><strong>Dirección:</strong> Palacio de Congresos, Madrid</li>
         </ul>
 
