--- a/destinos.html
+++ b/destinos.html
@@ -47,7 +47,7 @@
         <ul>
             <li><a href="https://www.spain.info" target="_blank">Turismo de España</a></li>
             <li><a href="https://www.japan.travel/es/" target="_blank">Oficina Nacional de Turismo de Japón</a></li>
-            <li><a href="https://www.australia.com/es-es" target="_blank">Turismo de Australia</a></li>
+            <li><a href="https://www.australia.com/en/travel-inspiration.html" target="_blank">Turismo de Australia</a></li>
         </ul>
 
         <img src="imagenes/destinos.jpg" alt="Collage de destinos turísticos del mundo" />
