--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Feria de Viajes 2025 - Inicio</title>
     <link rel="stylesheet" href="estilos/estilos.css" />
 </head>
-<body>
+<body onload="mostrarBienvenida()">
     <!-- Página principal de la Feria de Viajes -->
+
+    <!-- Cabecera y menú principal -->
     <header>
         <h1>Feria de Viajes 2025</h1>
         <nav>
@@ -38,8 +40,12 @@
         <p>¡No te pierdas la oportunidad de planear tu próxima aventura!</p>
     </main>
 
+    <!-- Pie de página -->
     <footer>
         <p>&copy; 2025 Feria de Viajes | <a href="https://creativecommons.org/licenses/by/4.0/">Licencia CC-BY</a></p>
     </footer>
+
+    <!-- Vinculación del archivo de funciones JavaScript -->
+    <script src="funciones/funciones.js"></script>
 </body>
 </html>
