--- a/programa.html
+++ b/programa.html
@@ -28,6 +28,10 @@
         <h2>Programa de Actividades</h2>
         <p>Consulta aquí el programa completo de actividades, charlas y talleres que se celebrarán durante los tres días de la Feria de Viajes 2025.</p>
 
+        <!-- Botón para mostrar hora actual -->
+        <button onclick="mostrarHoraActual()">Mostrar hora actual</button>
+        <div id="horaActual"></div>
+
         <!-- Tabla con horarios de actividades -->
         <table>
             <thead>
@@ -96,8 +100,12 @@
         <img src="imagenes/feria-programa.jpg" alt="Visitantes en la feria de viajes" />
     </main>
 
+    <!-- Pie de página -->
     <footer>
         <p>&copy; 2025 Feria de Viajes | Desarrollado por diturralde</p>
     </footer>
+
+    <!-- Vinculación del archivo de funciones JavaScript -->
+    <script src="funciones/funciones.js"></script>
 </body>
 </html>
